--- a/ArrayBankist/index.html
+++ b/ArrayBankist/index.html
@@ -119,7 +119,7 @@
       </p>
     </main>
 
-    <footer>&copy; by Jonas Schmedtmann. Don't claim as your own :)</footer>
+    <footer>&copy; by Bereket Alemayehu </footer>
 
     <script src="script.js"></script>
   </body>
